--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+  
+<h1>André Norbert</h1>
+<p>A Legjobb CSGO player</p>
+  
+<img src="img_chania.jpg" alt="Flowers in Chania">
