--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <body>
   
-<h1>André Norbert</h1>
-<p>A Legjobb CSGO player</p>
-  
-<img src="img_chania.jpg" alt="Flowers in Chania">
+![BeFunky-collage](https://user-images.githubusercontent.com/91726760/136439359-ca6c3074-689d-4a66-9eff-ec68010af7fb.jpg)
+
+  <h1>Turkey</1>
+  <p>Alanya</p>
+  </body>
+</html>
