--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  
+  ![BeFunky-collage](https://user-images.githubusercontent.com/91726760/136439359-ca6c3074-689d-4a66-9eff-ec68010af7fb.jpg
 
   <h1>Turkey</1>
   <p>Alanya</p>
