--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<img src="![BeFunky-collage2](https://user-images.githubusercontent.com/91726760/136443023-364bf8d0-611c-45cc-90b1-a07d8ffc2e48.jpg)
-" alt="Tukrey Alanya" width="104" height="142">
+<img src="BeFunky-collage2.jpg" alt="Turkey Alanya" width="720" height="720
+                                                                        ">
   <h1>Turkey</1>
   <p>Alanya</p>
   </body>
