--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
 
-<img src="BeFunky-collage2.jpg" alt="Turkey Alanya" width="720" height="720
-                                                                        ">
+<img src="BeFunky-collage2.jpg" alt="Turkey Alanya" width="720" height="720">
   <h1>Turkey</1>
   <p>Alanya</p>
   </body>
