--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
 <img src="Collage_1.jpg" alt="Turkey Alanya" width="720" height="720">
   <h1>Turkey</1>
   <p>Alanya</p>
