--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-  
-<img src="Collage_1.jpg" alt="Turkey Alanya" width="720" height="720">
+
+  <h1>André Norbért</h1>
+<img src="BeFunky-collage2.jpg" alt="Turkey Alanya" width="720" height="720">
   <h1>Turkey</1>
   <p>Alanya</p>
   </body>
