--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
   <h1>André Norbért</h1>
-<img src="BeFunky-collage2.jpg" alt="Turkey Alanya" width="720" height="720">
+<img src="https://raw.githubusercontent.com/PurpleBubu/Bubu/main/BeFunky-collage2.jpg" alt="Turkey Alanya" width="720" height="720">
   <h1>Turkey</1>
   <p>Alanya</p>
   </body>
